[gd_scene load_steps=2 format=3 uid="uid://cnintkfcmscan"]

[ext_resource type="Script" uid="uid://dn5ir7br6krbe" path="res://scenes/ui/CharacterSelection.gd" id="1_charselect"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_charselect")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="Background/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "BUTTON_BACK_ARROW"

[node name="TitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "CHARACTER_SELECTION_TITLE"
horizontal_alignment = 1

[node name="ContentSplit" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CharacterGrid" type="GridContainer" parent="Background/MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="RightPanel" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="StatsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/ContentSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsTitle" type="Label" parent="Background/MarginContainer/VBoxContainer/ContentSplit/RightPanel/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "STATS_TITLE"
horizontal_alignment = 1

[node name="StatsLabel" type="RichTextLabel" parent="Background/MarginContainer/VBoxContainer/ContentSplit/RightPanel/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "STATS_PLACEHOLDER"

[node name="EmptyBottomPanel" type="ColorRect" parent="Background/MarginContainer/VBoxContainer/ContentSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.0, 0.0, 0.0, 0.3)
